--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- heading and paragraph container -->
             <div class="lg:flex flex-row justify-between text-left lg:mb-16">
               <h1
-                class="font-cursive font-black uppercase text-dark-black text-[60px] leading-[55px] md:text-[70px] md:leading-[65px] lg:text-[96px] lg:leading-[88px] mb-8 md:mb-12 lg:mb-0 pr-[62px] md:pr-12 lg:pr-16 md:w-[375px] lg:w-[514px] lg:mix-blend-difference"
+                class="font-cursive font-black uppercase text-dark-black text-[60px] leading-[55px] md:text-[70px] md:leading-[65px] lg:text-[96px] lg:leading-[88px] mb-8 md:mb-12 lg:mb-0 pr-[62px] md:pr-12 lg:pr-16 md:w-[375px] lg:w-[514px] mix-blend-difference"
               >
                 <span class="lg:text-[#ffffff]">Modern Art Gal</span
                 ><span class="lg:text-[#ffffff]">lery</span>
