--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="./assets/favicon-32x32.png"
     />
     <link href="/dist/output.css" rel="stylesheet" />
+    <script defer src="js/script.js"></script>
     <title>Frontend Mentor | Art gallery website</title>
   </head>
   <body class="min-h-screen">
