--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="Explore the Modern Art Gallery's diverse collection and immerse yourself in the creative process of renowned artists. Visit us to be inspired by our distinct exhibits. Free entry, open daily from 8am to 9pm at 99 King Street, Newport, USA. Connect with us on social media: Facebook, Instagram, Twitter."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800;900&family=Outfit:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@800;900&amp;family=Outfit:wght@300&amp;display=swap"
       rel="stylesheet"
     />
     <link
@@ -16,222 +19,139 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <link href="/dist/output.css" rel="stylesheet" />
-    <script defer src="js/script.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+    <script defer="" src="script.js"></script>
     <title>Frontend Mentor | Art gallery website</title>
   </head>
-  <body class="min-h-screen">
+  <body>
     <main>
-      <!-- hero section -->
-      <section class="mb-[120px] lg:mb-[180px]">
-        <!-- section container -->
-        <div class="flex flex-col md:flex-row md:relative">
+      <div>
+        <section class="hero">
           <!-- dark background for desktop only -->
-          <div class="bg-dark-black w-[450px] h-[799px] hidden lg:block"></div>
-          <!-- hero image container -->
-          <div class="mb-8 md:mb-0">
-            <picture>
-              <source
-                media="(min-width:976px)"
-                srcset="assets/desktop/image-hero.jpg"
-              />
-              <source
-                media="(min-width:768px)"
-                srcset="assets/tablet/image-hero.jpg"
-              />
-              <img
-                class="mx-auto"
-                src="assets/mobile/image-hero.jpg"
-                alt="art"
-              />
-            </picture>
-          </div>
-          <!-- text container -->
-          <div
-            class="w-[343px] md:w-[339px] lg:w-[1110px] md:absolute mx-auto md:mt-[145px] lg:mt-[190px] md:ml-[389px] lg:ml-[165px]"
-          >
-            <!-- heading and paragraph container -->
-            <div class="lg:flex flex-row justify-between text-left lg:mb-16">
-              <h1
-                class="font-cursive font-black uppercase text-dark-black text-[60px] leading-[55px] md:text-[70px] md:leading-[65px] lg:text-[96px] lg:leading-[88px] mb-8 md:mb-12 lg:mb-0 pr-[62px] md:pr-12 lg:pr-16 md:w-[375px] lg:w-[514px] mix-blend-difference"
-              >
-                <span class="lg:text-[#ffffff]">Modern Art Gal</span
-                ><span class="lg:text-[#ffffff]">lery</span>
-              </h1>
-              <p
-                class="font-sans font-light text-moderate-gray text-[18px] leading-7 lg:text-[22px] lg:leading-8 mb-8 md:mb-12 lg:mb-0 lg:w-[350px]"
-              >
+          <div class="dark-bg"></div>
+          <picture>
+            <source
+              media="(min-width:976px)"
+              srcset="assets/desktop/image-hero.jpg"
+            />
+            <source
+              media="(min-width:660px)"
+              srcset="assets/tablet/image-hero.jpg"
+            />
+            <img
+              src="assets/mobile/image-hero.jpg"
+              alt="Two people looking at a picture on the wall"
+            />
+          </picture>
+
+          <div class="intro">
+            <div class="text">
+              <h1 class="main-heading">Modern Art Gallery</h1>
+              <p class="main-paragraph">
                 The arts in the collection of the Modern Art Gallery all started
                 from a spark of inspiration. Will these pieces inspire you?
                 Visit us and find out.
               </p>
             </div>
-            <!-- button -->
-            <div
-              id="btn"
-              class="flex justify-end bg-dark-black hover:bg-moderate-brown transition-all max-w-[260px] z-10 lg:ml-[760px]"
-            >
-              <a
-                id="btn-link"
-                class="font-cursive font-extrabold text-[white] text-[20px] tracking-[3.64px] hover:bg-moderate-brown uppercase py-6 px-8 transition-all"
-                href="location.html"
-              >
-                Our Location</a
-              >
-              <a
-                id="btn-arrow"
-                class="p-[22px] pt-[27px] bg-moderate-brown hover:bg-dark-black transition-all"
-                href="location.html"
-                ><img
-                  class="flex items-center justify-center animate-pulse"
-                  src="assets/icon-arrow-right.svg"
-                  alt=""
+            <div class="btn btn-location">
+              <a class="btn-arrow" href="location.html"
+                ><img src="assets/icon-arrow-right.svg" alt=""
               /></a>
+              <a class="btn-link" href="location.html">Our location</a>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <!-- center section 1 -->
-      <section class="mb-[32px] md:mb-[11px] lg:mb-[30px]">
-        <!-- center section 1 container -->
-        <div
-          class="flex flex-col md:flex-row-reverse w-[343px] md:w-[689px] lg:w-[1110px] mx-auto items-center"
-        >
-          <div class="mb-6 md:mb-0">
-            <picture>
+        <section class="images-grid">
+          <div class="grid-1-2">
+            <div class="grid-1">
+              <h2 class="day-gal">Your day at the gallery</h2>
+              <p class="day-gal-p">
+                Wander through our distinct collections and find new insights
+                about our artists. Dive into the details of their creative
+                process.
+              </p>
+            </div>
+
+            <picture class="grid-2">
               <source
                 media="(min-width:976px)"
                 srcset="assets/desktop/image-grid-1.jpg"
               />
               <source
-                media="(min-width:768px)"
+                media="(min-width:660px)"
                 srcset="assets/tablet/image-grid-1.jpg"
               />
               <img
-                class="mx-auto hover:scale-105 transition duration-[2000ms]"
                 src="assets/mobile/image-grid-1.jpg"
-                alt="art"
+                alt="a wide view of an art room with artifacts on the wall"
               />
             </picture>
           </div>
-          <div class="md:w-[223px] lg:w-[350px] md:mr-[68px] lg:mr-[125px]">
-            <h2
-              class="font-cursive uppercase font-black text-dark-black text-[50px] lg:text-[60px] leading-[50px] lg:leading-[55px] mb-5 md:mb-6 lg:mb-8 lg:w-[350px] pr-11 md:pr-0"
-            >
-              Your day at the gallery
-            </h2>
-            <p
-              class="font-sans font-light text-moderate-gray text-[18px] lg:text-[22px] leading-7 lg:leading-8 lg:w-[350px] lg:pr-[40px]"
-            >
-              Wander through our distinct collections and find new insights
-              about our artists. Dive into the details of their creative
-              process.
-            </p>
-          </div>
-        </div>
-      </section>
 
-      <!-- center section 2 -->
-      <section class="mb-[120px] lg:mb-[180px]">
-        <!-- center section 2 container -->
-        <div
-          class="flex flex-col md:flex-row w-[343px] md:w-[689px] lg:w-[1110px] mx-auto items-center"
-        >
-          <div class="mb-4 md:mb-0 md:mr-[11px] lg:mr-[30px]">
-            <picture>
+          <div class="grid-3-5">
+            <picture class="grid-3">
               <source
                 media="(min-width:976px)"
                 srcset="assets/desktop/image-grid-2.jpg"
               />
               <source
-                media="(min-width:768px)"
+                media="(min-width:660px)"
                 srcset="assets/tablet/image-grid-2.jpg"
               />
               <img
-                class="mx-auto hover:scale-105 transition duration-[2000ms]"
                 src="assets/mobile/image-grid-2.jpg"
-                alt="art"
+                alt="an art room with a brown bench facing an picture on the wall"
               />
             </picture>
-          </div>
-          <div>
-            <div class="mb-4 md:mb-[11px] lg:mb-[30px]">
-              <picture>
+
+            <div class="grid-4-5">
+              <picture class="grid-4">
                 <source
                   media="(min-width:976px)"
                   srcset="assets/desktop/image-grid-3.jpg"
                 />
                 <source
-                  media="(min-width:768px)"
+                  media="(min-width:660px)"
                   srcset="assets/tablet/image-grid-3.jpg"
                 />
                 <img
-                  class="mx-auto hover:scale-105 transition duration-[2000ms]"
                   src="assets/mobile/image-grid-3.jpg"
-                  alt="art"
+                  alt="visitors in an art room discovering different art pieces"
                 />
               </picture>
-            </div>
-            <div
-              class="w-[343px] md:w-[280px] lg:w-[445px] h-[293px] md:h-[396px] lg:h-[377px] bg-dark-black flex flex-col items-center justify-center px-6 md:px-[29px] lg:px-12"
-            >
-              <h2
-                class="font-cursive uppercase font-black text-[#ffffff] text-[50px] lg:text-[60px] leading-[50px] lg:leading-[58px] mb-6 lg:mb-8"
-              >
-                Come &amp; be inspired
-              </h2>
-              <p
-                class="font-sans font-light text-[#ffffff] text-[18px] lg:text-[22px] leading-7 lg:leading-8"
-              >
-                We’re excited to welcome you to our gallery and see how our
-                collections influence you.
-              </p>
+
+              <div class="grid-5">
+                <h2 class="day-gal gal1">Come &amp; be inspired</h2>
+                <p class="day-gal-p galp">
+                  We’re excited to welcome you to our gallery and see how our
+                  collections influence you.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
 
-    <footer
-      class="bg-dark-black h-[336px] md:h-[216px] lg:h-[244px] flex items-center"
-    >
-      <div
-        class="flex flex-col md:flex-row w-[311px] md:w-[689px] lg:w-[1110px] mx-auto items-center"
-      >
-        <div class="pr-[194px] md:pr-0 md:pb-8 lg:pb-6">
-          <img
-            class="md:w-[159.57] md:h-[58px] mb-[38px] md:mb-0 md:mr-[64.95px] lg:mr-[140.43px]"
-            src="assets/logo-light.svg"
-            alt="logo"
-          />
-        </div>
-        <div class="mb-[38px] md:mb-0 md:mr-[133px] lg:mr-[280px]">
-          <p
-            class="font-sans font-light text-[#ffffff] text-base lg:text-lg w-[311px] md:w-[281px] lg:w-[430px]"
-          >
-            The Modern Art Gallery is free to all visitors and open seven days a
-            week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
-          </p>
-        </div>
-        <div class="flex space-x-5 md:pb-20 lg:pb-16 self-start">
+    <footer>
+      <div class="footer-div">
+        <a href="#"
+          ><img class="footer-logo" src="assets/logo-light.svg" alt=""
+        /></a>
+        <p>
+          The Modern Art Gallery is free to all visitors and open seven days a
+          week from 8am to 9pm. Find us at 99 King Street, Newport, USA.
+        </p>
+        <div class="icons">
           <a href="#" aria-label="visit Facebook"
-            ><img
-              src="assets/icon-facebook.svg"
-              alt=""
-              class="duration-200 social-icon"
+            ><img src="assets/icon-facebook.svg" alt="" class="social-icon"
           /></a>
           <a href="#" aria-label="visit Instagram"
-            ><img
-              src="assets/icon-instagram.svg"
-              alt=""
-              class="duration-200 social-icon"
+            ><img src="assets/icon-instagram.svg" alt="" class="social-icon"
           /></a>
           <a href="#" aria-label="visit Twitter"
-            ><img
-              src="assets/icon-twitter.svg"
-              alt=""
-              class="duration-200 social-icon"
+            ><img src="assets/icon-twitter.svg" alt="" class="social-icon"
           /></a>
         </div>
       </div>
